--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ settings.py
 static/images/events/*
 static/images/tmp/*
 static/images/event_logos/*
-#static/css/event_css/*
+static/css/event_css/*
 afetch/twistd.pid
 afetch/twistd.log*
