Adding soem stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ afetch/twistd.log*
 core/templates/event_templates/*
 static/images/campaign/*
 static/images/campaign_logos/*
+static/css/widget/*
